<resources>
    <string name="app_name">CarParkFinder</string>
    <string name="btnR">RESERVAR</string>
    <string name="btnV">veure més</string>
    <string name="rect">Campus de Rectorat</string>
    <string name="cap">Campus de Cappont</string>
    <string name="salut">Campus de Ciències de la Salut</string>
    <string name="etsa">Campus de l’ETSEA</string>
    <string name="title_activity_details_parking">Map</string>
    <string name="info">Informació</string>
    <string name="llegar">com arribar</string>
    <string name="desc">Descripció</string>
    <string name="descRe">El pàrquing de Rectorat disposa de 62 places d’aparcament per a cotxes i 12 per a motos, totes elles degudament senyalitzades.</string>
    <string name="hora">Horari</string>
    <string name="horaRe">L’horari d’utilització serà de 7.00 a 23.00 hores, de dilluns a divendres laborals i de 7.00 a 15.00, dissabtes laborables.
        Per tal de facilitar el bon ús de l’aparcament, durant les nits, caps de setmana i
        festius no podrà quedar cap vehicle aparcat dins la zona d’aparcaments UdL, excepte en aquells
        casos, per raons de feina, hagi estat prèviament autoritzat per l’Administrador/a del Campus.</string>
    <string name="acc">Accés</string>
    <string name="accRe">L’accés a l’aparcament estarà restringit a les persones autoritzades i es farà mitjançant el carnet de la
        UdL que identifica a tots els membres de la comunitat universitària.</string>
    <string name="loc">Localització</string>
    <string name="locRe">Carrer del Bisbe Messeguer, 2, 25003 Lleida</string>
    <string name="horaEn">Hora</string>
    <string name="horaEntrada">Hora d’entrada:</string>
    <string name="horaSortida">Hora de sortida:</string>
    <string name="tipus">Tipus de vehicle:</string>
    <string name="placa">Plaça:</string>
    <string name="placaS">Seleccionar</string>
    <string name="infoB">Informació bàsica</string>
    <string name="infoC">Informació de contacte</string>
    <string name="profile">Perfil</string>
    <string name="cerrar"><u>Surt de la sessió</u> </string>
    <string name="blank">Encara no heu emplenat cap informació</string>
    <string name="inic"><u>Iniciar sessió</u></string>
    <string name="title_activity_maps">Map</string>
    <string name="select">Selecció de plaça</string>
    <string name="mires">Mi reserva</string>
    <string name="cancel">Cancel·lar reserva</string>
    <string name="cerrarS">Està segur de voler tanca la sessió?</string>
    <string name="cancelRe">Estàs segur de voler cancel·lar la reserva?</string>
    <string name="settings">Configuració</string>
    <string name="permission_denied_explanation">S’ha denegat el permís, però es necessita per als principals funcionalitat.</string>
    <string name="no_connection">Es necessari tindre una conexió a internet.</string>

    <string name="tancat">El parking es troba tancat</string>
    <string name="ruta">Ruta fins aparcament</string>
    <string name="GPS">  El GPS es troba deshabilitat, es necessari activar-lo per a crear la ruta!</string>
    <string name="title_activity_manage_main">ManageMain</string>
    <string name="title_home">Inici</string>
    <string name="reserva">Reserva</string>
    <string name="sel">Selecciona una plaça disponible</string>
    <string name="fail">Plaça seleccionada no disponible</string>
    <string name="prefe">Preferències</string>
    <string name="prefeEx">Preferències guardades amb èxit</string>
    <string name="cappontD">El campus de Cappont disposa d’un pàrquing soterrani amb 160 places d’aparcament, d’accés restringit per al PDI i el PAS.</string>
    <string name="cappontL">Campus Cappont, Carrer de Jaume II, 67, 25001 Lleida</string>
    <string name="selec">Selecció de les preferències</string>
    <string name="regis"><u>Registrat!</u></string>
    <string name="textRegis">No tens cap conta?</string>
    <string name="registrat"><u>Registre</u></string>
    <string name="bntRegis">Registrar-me</string>
    <string name="cancelar"><u>   Cancel·lar   </u></string>
    <string name="nada">No tens cap reserva</string>
</resources>
