<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <fragment
                android:id="@+id/map4"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:context=".DetailsParking" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/rect"
                    android:textAlignment="center"
                    android:textColor="#817F0047"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ScrollView
                android:id="@+id/sc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="0.9">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView36"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/horaEn"
                        android:textColor="#7F0047"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/horaEntrada"
                            android:textColor="#817F0047"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView39"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="35dp"
                            android:layout_weight="1"
                            android:text="15:30"
                            android:textColor="#070707"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/horaSortida"
                            android:textColor="#817F0047"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/textView40"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="31dp"
                            android:layout_weight="1"
                            android:text="18:00"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView31"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/placa"
                            android:textAllCaps="false"
                            android:textColor="#7F0047"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView32"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="50dp"
                                android:layout_weight="1"
                                android:text="Nº: 5"
                                android:textColor="#090909"
                                android:textSize="20sp" />

                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView38"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:text="@string/tipus"
                        android:textColor="#7F0047"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/car" />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/lyBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnArr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#7F0047"
                    android:text="@string/llegar"
                    android:textColor="#FFFFFF" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#F40202"
                    android:text="@string/cancel"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>